Co-authored-by: kensho0101 <taroa36912@users.noreply.github.com>

--- a/webhome-3/css_folder/movie4.css
+++ b/webhome-3/css_folder/movie4.css
@@ -94,10 +94,16 @@ body{
   
   .arti h3{
     border-bottom: 1px solid #009ADA;
+    text-align: center;
   }
   
   .fan_1{
     display: flex;
+  }
+
+  .samune{
+    width: 300px;
+    height: 400px;
   }
   
   .link{
