--- a/webhome-3/css_folder/category.css
+++ b/webhome-3/css_folder/category.css
@@ -1,5 +1,3 @@
-#cssは変更しない
-
 body{
   width: 100%;
   margin:0 auto;
@@ -12,8 +10,8 @@ body{
   overflow: hidden;
 }
 
-body p{
-  margin: 80px 0;
+iframe{
+  border: none;
 }
 
 body a{
@@ -21,12 +19,39 @@ body a{
   color: black;
 }
 
-iframe{
-  border: none;
-}
-
 header{
   background-color: #acffff;
+}
+
+.main-arti{
+  font-family: YakuHanJP, "SF Pro JP", "SF Pro Text", "SF Pro Icons", "BIZ UDPGothic", Meiryo, "Helvetica Neue", Arial, "Hiragino Sans", "Hiragino Kaku Gothic ProN", sans-serif;
+  background-color: #acffff;
+  display: flex;
+  padding: 10px 5px 0% 15px;
+}
+
+.main-arti h1{
+  font-size: 20px;
+  justify-content:center;
+}
+
+.main1{
+  flex:1;
+}
+
+.main2{
+  flex:1;
+}
+
+.main3{
+  flex:1;
+}
+
+.main-arti img{
+  height: 75%;
+  width: 95%;
+  opacity: 0.8;
+
 }
 
 .main-body{
@@ -56,61 +81,9 @@ header{
   height: 1300px;
 }
 
-.arti{
+.arti-list{
   margin: 30px auto;
   width: 40%;
-}
-
-.logo{
-  width: 80px;
-  height: 30px;
-}
-
-.open_day{
-  font-size: 13px;
-}
-
-.table{
-  background-color: #e0ffff;
-  padding: 10px 0;
-  border: 1px solid black;
-  margin: 20px 0;
-  text-align: center;
-}
-
-.table h1{
-  font-size: 25px;
-  text-align: center;
-}
-
-.table li{
-  border-bottom: 1px solid black;
-  margin: 20px 50px;
-  font-family: YuGothic, "Yu Gothic", 游ゴシック体, 游ゴシック, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Verdana, メイリオ, Meiryo, Osaka, "MS PGothic", Arial, Helvetica, sans-serif;;
-}
-
-.arti h2{
-  border-bottom: 1px solid #000;
-  margin: 40px 0 40px 0;
-}
-
-.arti h3{
-  border-bottom: 1px solid #009ADA;
-}
-
-.fan_1{
-  display: flex;
-}
-
-.link{
-  color: red;
-  border: solid 2px;
-  padding: 20px 20px;
-  text-decoration:none;
-}
-
-.arti-list{
-  margin: 30px 60px;
 }
 
 .arti-1{
@@ -132,11 +105,6 @@ header{
   margin: 10px 250px 0 0;
 }
 
-.free_img{
-  width: 400px;
-  height: 300px;
-}
-
 footer {
   padding: 10px 0;
   margin: 20px 0 0;
@@ -150,24 +118,20 @@ footer iframe{
 @media screen and (max-width: 959px) {
 /* 959px以下に適用されるCSS（タブレット用） */
 
+  .main-arti h1{
+      font-size: 12px;
+      justify-content:center;
+  }
+
   .main-body iframe{
       width: 160px;
       margin: 20px 0 0 0;
   }
 
-  .arti{
+  .arti-list{
       margin: 30px 10px;
       width: 100%;
-  }
-
-  .table{
-    width: 300px;
-    margin: 0 auto;
-  }
-
-  .table li{
-    margin: 10px 10px 0 0;
-  }
+      }
 
   .arti-1 h1{
       font-size: 15px;
@@ -175,12 +139,8 @@ footer iframe{
 
   }
 
-  .left{
-    display: none;
-  }
-
-  .right{
-    display: none;
+  .ri-i{
+      display: none;
   }
 
 }
@@ -192,12 +152,12 @@ footer iframe{
       margin: -20px 0 0 0;
   }
 
-  .left{
+  .main-body iframe{
       display: none;
   }
 
-  .right{
-    display: none;
+  .main3{
+      display: none;
   }
 
   footer iframe{
