--- a/webhome-3/css_folder/article.css
+++ b/webhome-3/css_folder/article.css
@@ -22,9 +22,34 @@ body{
   iframe{
     border: none;
   }
+
+  .logo{
+    width: 80px;
+    height: 30px;
+  }
   
   header{
     background-color: #acffff;
+  }
+
+  .samune{
+    width: 300px;
+    height: 400px;
+  }
+
+  .samune1{
+    width: 300px;
+    height: 400px;
+  }
+
+  .samune2{
+    width: 300px;
+    height: 300px;
+  }
+  
+  .samune3{
+    width: 300px;
+    height: 200px;
   }
   
   .main-body{
