--- a/webhome-3/css_folder/article.css
+++ b/webhome-3/css_folder/article.css
@@ -27,6 +27,11 @@ body{
     width: 80px;
     height: 30px;
   }
+
+  .logo2{
+    width: 400px;
+    height: 200px;
+  }
   
   header{
     background-color: #acffff;
