--- a/webhome-3/css_folder/list.css
+++ b/webhome-3/css_folder/list.css
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     margin:0 auto;
-    background-color: white;
+    background-color: #acffff;
     color: #000;
     justify-content:center;
 }
@@ -18,4 +18,9 @@ body a{
 
 body h1{
     font-size: 20px;
+}
+
+.list{
+    display: flex;
+    margin: 100px;
 }
