--- a/webhome-3/css_folder/list.css
+++ b/webhome-3/css_folder/list.css
@@ -1,7 +1,8 @@
 body{
     width: 100%;
+    height: 100px;
     margin:0 auto;
-    background-color: #acffff;
+    background-color: #e0ffff;
     color: #000;
     justify-content:center;
 }
@@ -9,6 +10,7 @@ body{
 img{
     width: 100px;
     height: 70px;
+    margin: 10px;
 }
 
 body a{
@@ -22,5 +24,4 @@ body h1{
 
 .list{
     display: flex;
-    margin: 100px;
 }
