--- a/webhome-3/css_folder/list.css
+++ b/webhome-3/css_folder/list.css
@@ -8,9 +8,9 @@ body{
 }
 
 img{
-    width: 100px;
-    height: 70px;
-    margin: 10px;
+    width: 150px;
+    height: 80px;
+    margin: 20px;
 }
 
 body a{
@@ -20,6 +20,7 @@ body a{
 
 body h1{
     font-size: 20px;
+    text-align: center;
 }
 
 .list{
