--- a/webhome-3/css_folder/ad.css
+++ b/webhome-3/css_folder/ad.css
@@ -38,6 +38,10 @@
       display: none;
     }
 
+    .ad-maxwidth{
+      display: none;
+    }
+
     iframe.relate-mobile{
       display: block;
       width: 400px;
