--- a/webhome-3/css_folder/ad.css
+++ b/webhome-3/css_folder/ad.css
@@ -48,4 +48,15 @@
       height: 1000px;
     }
 
+    .ad-minwidth img{
+      display: block;
+      margin: 0 auto;
+    }
+
+    .ad-minwidth a{
+      display: block;
+      margin: 10px 0;
+  
+    }
+
   }
