--- a/webhome-3/css_folder/ad.css
+++ b/webhome-3/css_folder/ad.css
@@ -1,19 +1,16 @@
   .ad-maxwidth img{
     display: block;
     margin: 0 auto;
-
   }
 
   .ad-maxwidth a{
     display: block;
     margin: 10px 0;
-
   }
 
   iframe.relate{
-    width: 500px;
+    width: 120%;
     height: 1000px;
-    margin: 0 0 0 -20px;
   }
 
   iframe.relate-mobile{
@@ -32,7 +29,7 @@
     }
   }
 
-
+  
   @media screen and (max-width: 532px) {
     iframe.relate{
       display: none;
