--- a/webhome-3/css_folder/ad.css
+++ b/webhome-3/css_folder/ad.css
@@ -35,13 +35,9 @@
       display: none;
     }
 
-    .ad-maxwidth{
-      display: none;
-    }
-
     iframe.relate-mobile{
       display: block;
-      width: 400px;
+      width: 100%;
       height: 1000px;
     }
 
