--- a/webhome-3/css_folder/article.css
+++ b/webhome-3/css_folder/article.css
@@ -61,6 +61,7 @@ body{
     color: black;
     display: flex;
     width: 100%;
+    height: 2000px;
   }
   
   .left{
@@ -79,9 +80,9 @@ body{
   }
   
   
-  .right iframe{
+  .ri-i{
     width: 220px;
-    height: 1300px;
+    height: 2000px;
   }
   
   .arti{
