--- a/css_folder/article.css
+++ b/css_folder/article.css
@@ -18,7 +18,7 @@ body{
     text-decoration:none;
     color: black;
   }
-  
+
   iframe{
     border: none;
   }
@@ -62,6 +62,8 @@ body{
     display: flex;
     width: 100%;
     height: 2000px;
+    height: auto; /* 高さを自動調整 */
+    overflow: auto; /* スクロールを有効にする */
   }
   
   .left{
